<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="right|center_vertical"

        android:weightSum="1">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="40dp"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="0.48"
            android:text="@string/txt_DeleteProject"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="60px"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/txt_Title_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="50px"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="از پاک کردن این آیتم اطمینان دارید؟"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="right|center_vertical"
        android:gravity="left|center_vertical">

        <Button
            android:id="@+id/btn_Ok"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/Yes"
            android:textSize="16dp" />

        <Button
            android:id="@+id/bnt_Cancel_"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:background="@null"
            android:text="@string/No"
            android:textSize="16dp" />
    </LinearLayout>
</LinearLayout>