<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/tab_handy"
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:textSize="16dp"
                android:textColor="#000"
                android:text="@string/Date" />

            <TextView
                android:id="@+id/txt_Date_NewClock"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:textSize="16dp"
                android:textColor="#000"
                android:text="@string/Time" />

            <TextView
                android:id="@+id/txt_Time_NewClock"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="right|center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_Insert_Handy_NewClock"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/Insert"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>