<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical|left"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingRight="10dp"
            android:text="@string/txt_DeleteClock"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000"
            android:textSize="60px"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:layoutDirection="ltr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="70dp">

                <TextView
                    android:id="@+id/txt_SumDT_DeletClock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="--:--:--" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_TypeInsert_DeleteClock"
                    android:layout_width="15dp"
                    android:layout_height="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <TextView
                        android:id="@+id/txt_FirstDT_DeleteClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:text="تردد ناقص" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <TextView
                        android:id="@+id/txt_SecondDT_DeleteClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="10dp"
                        android:text="تردد ناقص" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="right|center_vertical"
        android:gravity="left|center_vertical">

        <Button
            android:id="@+id/bnt_Cancel_DeleteClock"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/Cancel"
            android:textColor="#000"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_Ok_DeleteCLock"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/Delete"
            android:textColor="#000"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>