<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:gravity="right">

                <ImageView
                    android:id="@+id/img_Close_NewClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">

                <TextView
                    android:id="@+id/txt_Title_Toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="TextView"
                    android:textColor="@android:color/background_light"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TabHost
        android:id="@+id/tabHostInsert"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                //Automatic

                <LinearLayout
                    android:id="@+id/tab_Automatic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:textAlignment="center">

                    <TextView
                        android:id="@+id/txt_Time_Automatic"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="00:00:00"
                        android:textColor="#000"
                        android:textSize="50dp" />

                    <Button
                        android:id="@+id/btn_InsertAutomatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_green_dark"
                        android:text="@string/Start"
                        android:textSize="16dp" />
                </LinearLayout>

                //Handy
                <LinearLayout
                    android:id="@+id/tab_handy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="rtl"
                    android:orientation="vertical"
                    android:textAlignment="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:background="@drawable/borderwithripple"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingRight="10dp"
                            android:textSize="17dp"
                            android:textColor="#000"
                            android:text="@string/Date" />

                        <TextView
                            android:id="@+id/txt_Date_NewClock"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="17dp"
                            android:textColor="#000"
                            android:gravity="right|center_vertical" />
                    </LinearLayout>

                    <LinearLayout
                        android:background="@drawable/borderwithripple"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingRight="10dp"
                            android:textSize="17dp"
                            android:textColor="#000"
                            android:text="@string/Time" />

                        <TextView
                            android:id="@+id/txt_Time_NewClock"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="17dp"
                            android:textColor="#000"
                            android:gravity="right|center_vertical" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom">

                        <Button
                            android:id="@+id/btn_Insert_Handy_NewClock"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:text="@string/Insert"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>


                //Timer
                <LinearLayout
                    android:id="@+id/tab_Timer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textAlignment="center">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true">

                            <TextView
                                android:id="@+id/txt_TimeView_NewClockTimer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="40dp"
                                android:gravity="center"
                                android:text="00:00:00"
                                android:textColor="#000"
                                android:textSize="50dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center">

                            <Button
                                android:id="@+id/btn_Start_End__NewClockTimer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/Start"
                                android:textSize="16dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_alignParentBottom="true">

                            <Button
                                android:id="@+id/btn_Insert_NewClockTimer"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:enabled="false"
                                android:gravity="center"
                                android:text="@string/Insert"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>