<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_EditClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/txt_Title_Toolbar_EditClock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textColor="@android:color/background_light"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:paddingLeft="10dp">

                <ImageView
                    android:id="@+id/img_Close_EditClock"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:paddingRight="10dp"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/borderwithripple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Date"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txt_Date_First_EditClock"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingRight="7dp"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borderwithripple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Time"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txt_Time_First_EditClock"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingRight="7dp"
                        android:textColor="#000"
                        android:textSize="17dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/borderwithripple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Date"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txt_Date_Second_EditClock"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingRight="7dp"
                        android:textColor="#000"
                        android:textSize="17dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borderwithripple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/Time"
                        android:textColor="#000"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txt_Time_Second_EditClock"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:paddingRight="7dp"
                        android:textColor="#000"
                        android:textSize="17dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_Insert_EditClock"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/Update"
                android:textColor="#000"
                android:textSize="17dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>